[package]
name = "docx"
version = "1.1.4"
authors = ["Martin Bammer <mrbm74@gmail.com>", "PoiScript <poiscript@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/brmmm3/docx-rs"
description = "A Rust library for parsing and generating docx files."
keywords = ["docx", "generator", "openxml", "parser"]

[dependencies]
derive_more = "0.99"
log = "0.4"
strong-xml = { version = "0.6", features = ["log"] }
zip = "2.1"

[dev-dependencies]
env_logger = "0.11"
